feat: implement analytics service with report generation, Kafka event consumption, and projection persistence